--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,7 +4,7 @@ env:
   variables:
     AWS_DEFAULT_REGION: "us-east-1"
     ECR_REPOSITORY_NAME: "omnilayers-tiles"
-    AWS_ACCOUNT_ID: "566578246562"
+    AWS_ACCOUNT_ID: "403179053416"
     
 phases:
   pre_build:
@@ -23,9 +23,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      #- export TAG="$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - docker build -t $REPOSITORY_URI:latest .
-      - docker tag omnilayers-tiles:latest 403179053416.dkr.ecr.us-east-1.amazonaws.com/omnilayers-tiles:latest
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
 
       #- docker tag maptiler/tileserver-gl omnilayers-tiles/tileserver
       
@@ -33,11 +32,10 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing Docker images to ECR...
-      #- docker push $REPOSITORY_URI:latest
-      - DOCKER_CONTAINER_NAME=omnilayers-tiles
-      - docker push 403179053416.dkr.ecr.us-east-1.amazonaws.com/omnilayers-tiles:latest
-      #- docker push $REPOSITORY_URI:$TAG
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
+      - DOCKER_CONTAINER_NAME=omnilayers-tiles
       - printf '[{"name":"%s","imageUri":"%s:%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI $IMAGE_TAG > imagedefinitions.json
       - echo $DOCKER_CONTAINER_NAME
       - echo Printing imagedefinitions.json
